Finished Russian translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -597,9 +597,10 @@
   "update" : "Update",
   "update-current-name" : "Update the current name",
   "update-description" : "Update description",
-  "update-node-name" : "Update Node Name",
+  "update-name" : "Update",
+  "update-node-name" : "Update Name",
   "upload-image" : "Upload image",
-  "uploading-file" : "Uploading ${progress}% ...",
+  "uploading-file" : "Uploading {progress}% ...",
   "uploading-files" : "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
   "upload-or-copy-or-drop-images" : "<0>Upload images</0> or <1>Copy image</1> or drop them here",
@@ -618,7 +619,7 @@
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
   "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
-  "want-disconnect" : "Do you really want to disconnect from your home node?",
+  "want-disconnect" : "Do you really want to disconnect from your home blog?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
