--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -482,10 +482,161 @@
         }
       }
     },
+    "node" : {
+      "avatar_max-size" : "Максимальный размер аватаров",
+      "comment_deleted_lifetime" : "Стирать удалённые комментарии через",
+      "comment_draft_lifetime" : "Стирать черновики комментариев через",
+      "comment_max-size" : "Максимальный размер комментариев",
+      "comment_max-size_soft" : "Максимальный размер комментариев",
+      "comment_revision_lifetime" : "Стирать старые версии комментариев через",
+      "credentials-reset_token_lifetime" : "Аннулировать код для сброса пароля через",
+      "feed_width" : "Web UI: Ширина ленты (в пикселах)",
+      "instants_lifetime" : "Стирать уведомления через",
+      "instants_viewed_lifetime" : "Стирать просмотренные уведомления через",
+      "media_max-size" : "Максимальный размер загружаемых медиафайлов",
+      "media_preview-gain" : "Фактор эффективности предпросмотра медиа",
+      "media_verification_max-size" : "Максимальный размер медиафайлов, скачиваемых для верификации",
+      "naming_location" : "Местонахождение сервера имён",
+      "naming_unavailable_max-retries" : "Число повторных попыток соединения с сервером имён",
+      "news_lifetime" : "Стирать новости через",
+      "news_purge-pinned" : "Стирать прикреплённые новости",
+      "posting_deleted_lifetime" : "Стирать удалённые посты через",
+      "posting_draft_lifetime" : "Стирать черновики постов через",
+      "posting_image_recommended-pixels" : "Максимальное разрешение сжатой картинки в посте (в пикселах)",
+      "posting_image_recommended-size" : "Максимальный размер сжатой картинки в посте",
+      "posting_max-size" : "Максимальный размер постов",
+      "posting_media_max-size" : "Максимальный размер прикреплённых медиа к постам",
+      "posting_non-admin_allowed" : "Разрешить любому пользователю добавлять посты (экспериментальное)",
+      "posting_picked_hide-on-delete" : "Не удалять посты из ленты новостей, когда удалён оригинал",
+      "posting_picked_revision_lifetime" : "Стирать старые версии скачанных постов через",
+      "posting_revealed_notification_age" : "Уведомлять подписчиков об открытии закрытого поста, если он новее, чем",
+      "posting_revision_lifetime" : "Стирать старые версии постов через",
+      "posting_subject_present" : "У постов есть заголовки",
+      "posting_time_relative" : "Web UI: Показывать в постах относительное время",
+      "profile_signing-key_valid-from_layover" : "Задержка активации ключа для подписи",
+      "push_client_lifetime" : "Прекращать посылать пуш-уведомления неактивным клиентам через",
+      "push_client_max-number" : "Максимальное число клиентов, получающих пуш-уведомления",
+      "push_notification_lifetime" : "Удалять неполученные пуш-уведомления через",
+      "reaction_deleted_lifetime" : "Стирать удалённые реакции через",
+      "remote-comment-verification_lifetime" : "Хранить результаты верификации комментария в течение",
+      "remote-posting-verification_lifetime" : "Хранить результаты верификации поста в течение",
+      "remote-reaction-verification_lifetime" : "Хранить результаты верификации реакции в течение",
+      "subscribers_view" : "Список подписчиков виден",
+      "subscribers_view-total" : "Число подписчиков видно",
+      "subscriptions_view" : "Список подписок виден",
+      "subscriptions_view-total" : "Число подписок видно",
+      "token_lifetime" : "Срок жизни токена для аутентификации",
+      "webmaster_email" : "E-mail вебмастера",
+      "webmaster_name" : "Имя вебмастера",
+      "webui_allow-indexing" : "Разрешить поисковым системам индексировать блог",
+      "webui_enabled" : "Включить Web UI",
+      "webui_head_top_html" : "Web UI: HTML для вставки в начало <HEAD>",
+      "webui_redirect-to-client" : "Web UI: Открывать в веб-клиенте"
+    },
     "sheet" : {
-      "posting" : "Пост"
+      "addons" : "Дополнения",
+      "appearance" : "Вид",
+      "comment" : "Комментарий",
+      "news" : "Новости",
+      "notifications" : "Уведомления",
+      "other" : "Прочее",
+      "posting" : "Пост",
+      "reactions" : "Реакции",
+      "security" : "Безопасность",
+      "webui" : "Web UI"
     }
   },
+  "settings" : "Настройки",
+  "settings-incorrect-values" : "Некоторые настройки установлены в неверные значения.",
+  "share" : "Поделиться",
+  "share-ellipsis" : "Поделиться...",
+  "share-page" : "Поделиться страницей",
+  "show-formatting-hint" : "Показать подсказку по форматированию",
+  "show-list-reactions" : "Показывать список реакций",
+  "show-number-reactions" : "Показывать число реакций",
+  "signature-correct" : "Подпись верна",
+  "signature-incorrect" : "Подпись неверна",
+  "signature-verification-in-progress" : "Идёт проверка подписи",
+  "sign-up" : "Регистрация",
+  "size" : "Размер",
+  "spoiler" : "Спойлер",
+  "strikeout" : "Зачёркнутый",
+  "subscribe" : "Подписаться",
+  "subscribe-back" : "Подписаться в ответ",
+  "subscribed" : "Подписан",
+  "subscribed-to-me" : "Подписан на меня",
+  "subscribers" : "Подписчики",
+  "subscriptions" : "Подписки",
+  "summary" : "Коротко",
+  "support" : "Одобряю",
+  "text" : "Текст",
+  "text-contains-formatting" : "Текст содержит форматирование. Вы хотите скопировать текст с тегами форматирования?",
+  "text-formatting" : "Форматирование текста",
+  "text-only" : "Только текст",
+  "title" : "Заголовок",
+  "token-name" : "Имя токена",
+  "token-usage-warning" : "Имейте в виду, что токен даёт полный доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
+  "too-long" : "Слишком длинно",
+  "tooltip" : "Подсказка",
+  "top" : "В конец",
+  "to-post" : "← Пост",
+  "transfer" : "Переместить",
+  "transfer-existing-name" : "Переместить существующее имя",
+  "transfer-existing-name-button" : "Переместить существующее имя",
+  "transfer-node-name" : "Переместить имя с другого узла",
   "undo" : "Отменить",
-  "write-comment-here" : "Напишите тут комментарий для {mention}..."
+  "unfollow-comments" : "Не следить за комментариями",
+  "unhide" : "Раскрыть",
+  "unhide-my-subscription" : "Раскрыть мою подписку",
+  "unhide-subscription-to-me" : "Раскрыть подписку на меня",
+  "unknown-name" : "Неизвестное имя",
+  "unpin" : "Открепить",
+  "unselect-all" : "Снять выбор",
+  "unsigned" : "Не подписано",
+  "unsubscribe" : "Отписаться",
+  "update" : "Изменить",
+  "update-current-name" : "Обновить текущее имя",
+  "update-description" : "Описание обновления",
+  "update-name" : "Обновить",
+  "update-node-name" : "Обновить имя",
+  "upload-image" : "Загрузить картинку",
+  "uploading-file" : "Загружается {progress}% ...",
+  "uploading-files" : "Загружается {loadedFiles} из {totalFiles} {progress}% ...",
+  "upload-or-copy-images" : "<0>Загрузить картинки</0> или <1>Скопировать картинку</1>",
+  "upload-or-copy-or-drop-images" : "<0>Загрузить картинки</0> или <1>Скопировать картинку</1> или перетащите их сюда",
+  "url" : "URL",
+  "used-by-addon" : "Используется дополнением:",
+  "verify-signature" : "Проверить подпись",
+  "view-as-chart" : "В виде диаграммы",
+  "view-as-list" : "В виде списка",
+  "view-comments" : "Показать комментарии",
+  "view-earlier-comments" : "Показать предыдущие комментарии",
+  "view-images-grid" : "Показать картинки в виде мозаики",
+  "view-images-list" : "Показать картинки в виде списка",
+  "view-later-comments" : "Показать следующие комментарии",
+  "view-source" : "Показать исходный текст",
+  "view-source-title" : "Показать исходный текст",
+  "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
+  "want-delete-draft" : "Вы действительно хотите удалить черновик?",
+  "want-delete-token" : "Вы действительно хотите удалить токен \"{name}\"?",
+  "want-disconnect" : "Вы действительно хотите отключиться от вашего домашнего блога?",
+  "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
+  "welcome" : "Привет!",
+  "where-from" : "Откуда он взят?",
+  "where-go" : "Куда вы хотите пойти?",
+  "width" : "Ширина",
+  "write-anything" : "Пишите что угодно...",
+  "write-comment-here" : "Напишите тут комментарий для {mention}...",
+  "write-down-words" : "Пожалуйста, запишите или распечатайте эти слова и храните их в безопасном месте. Они вам понадобятся для любых операций с именем ‘{name}’. <0>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</0>",
+  "written-down-words" : "Я записал эти слова",
+  "yes" : "Да",
+  "you-at-home" : "Это ваш домашний блог",
+  "you-can-copy-token" : "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
+  "your-news" : "Ваши новости",
+  "your-password" : "Ваш пароль",
+  "your-profile" : "Ваш профиль",
+  "your-settings" : "Ваши настройки",
+  "your-timeline" : "Ваша хроника",
+  "zoom-in" : "Увеличить",
+  "zoom-out" : "Уменьшить"
 }
