--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -9,5 +9,128 @@
   "alert-text" : "Текст попередження",
   "align" : "Вирівнювання",
   "all" : "Усі",
-  "allowed-oppose-reactions" : "Дозволені схвальні реакції"
+  "allowed-oppose-reactions" : "Дозволені несхвальні реакції",
+  "allowed-support-reactions" : "Дозволені схвальні реакції",
+  "alt-text" : "Альтернативний текст",
+  "alt-text-button" : "Альт. текст",
+  "auto" : "Авто",
+  "auto-hide-comments" : "Автоматично приховувати коментарі",
+  "avatar" : "Аватар",
+  "avatar-placeholder" : "Місце для аватара",
+  "avatar-shape" : "Форма аватара",
+  "back-to-feed" : "← {feed}",
+  "bio" : "Про себе",
+  "bold" : "Жирний",
+  "bottom" : "У початок",
+  "cancel" : "Відмінити",
+  "caption" : "Заголовок",
+  "change" : "Змінити",
+  "change-date-time" : "Змінити дату/час",
+  "change-date-time-ellipsis" : "Змінити дату/час...",
+  "change-home-password" : "Змінити домашній пароль",
+  "change-password" : "Змінити пароль",
+  "change-password-ellipsis" : "Змінити пароль...",
+  "client-settings-changed-conflict" : "Налаштування клієнта були кимось змінені.",
+  "clipboard-contains-formatting" : "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
+  "close" : "Закрити",
+  "comment-button" : "Коментувати",
+  "comment-edited-conflict" : "Коментар був кимось змінений.",
+  "commenting-allowed-to" : "Коментування дозволене",
+  "comments" : "Коментарі",
+  "comments-disabled" : "Коментарі вимкнені",
+  "comments-visible-to" : "Коментарі видно",
+  "comment-updated-at" : "змінений",
+  "compress-images" : "Стискати картинки",
+  "confirm-password" : "Підтвердження пароля",
+  "connect" : "Підключитись",
+  "connected" : "Підключений",
+  "connect-home" : "Підключитись до дому",
+  "connecting" : "Підключення",
+  "continue-reading" : "Читати далі →",
+  "copy" : "Копіювати",
+  "copy-image-from-internet" : "Копіювати картинку з Інтернету",
+  "copy-image-link" : "Копіювати посилання на картинку",
+  "copy-link" : "Копіювати посилання",
+  "copy-quote" : "Копіювати цитату",
+  "copy-text" : "Копіювати текст",
+  "copy-with-formatting" : "Копіювати текст із форматуванням",
+  "count-comments" : "{count} {count, plural, one {коментар} few {коментарі} other {коментарів}}",
+  "count-more" : "Ще {count}",
+  "count-new" : "{count} {count, plural, one {новий} other {нових}}",
+  "count-posts" : "<0>{count}</0> {count, plural, one {пост} few {поста} other {постів}}",
+  "count-subscribers" : "<0>{count}</0> {count, plural, one {підписник} few {підписника} other {підписників}}",
+  "count-subscriptions" : "<0>{count}</0> {count, plural, one {підписка} few {підписки} other {підписок}}",
+  "create" : "Створити",
+  "create-avatar" : "Створити аватар",
+  "create-blog" : "Створити блог",
+  "created-at" : "Створений:",
+  "create-token" : "Створити токен",
+  "current" : "Поточний",
+  "current-password" : "Поточний пароль",
+  "delete" : "Видалити",
+  "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
+  "delete-draft" : "Видалити чернетку",
+  "deleting" : "Видалення...",
+  "description" : "Опис",
+  "disconnect" : "Відключитись",
+  "discussion-closed" : "Обговорення закрите",
+  "domain" : "Домен",
+  "domain-already-taken" : "Домен вже зайнятий",
+  "domain-too-short" : "Занадто короткий, має бути мінімум 4 символи",
+  "donate" : "Донат",
+  "donate-to-recipient" : "Донати для <0>{recipientName}</0>",
+  "donations-android-prohibited" : "Функція донатів заборонена в додатках для Android, завантажених з Google Play, відповідно до <0>Політики платежів Google Play</0>.<1/><2/> Будь ласка, використовуйте веб-клієнт Moera для цього.",
+  "dont-ask-next-time" : "Не питати наступного разу",
+  "download" : "Завантажити",
+  "downloading-image" : "Завантаження картинки...",
+  "do-you-have-blog" : "Ви маєте блог на Moera?",
+  "drafts" : "Чернетки",
+  "draft-saved" : "Збережено.",
+  "draft-saving" : "Збереження...",
+  "duration-unit" : {
+    "format" : {
+      "always" : "завжди",
+      "day" : "{count} {count, plural, one {день} few {дні} other {днів}}",
+      "hour" : "{count} год",
+      "min" : "{count} хв",
+      "never" : "ніколи",
+      "sec" : "{count} сек"
+    },
+    "name" : {
+      "always" : "завжди",
+      "day" : "днів",
+      "hour" : "годин",
+      "min" : "хвилин",
+      "never" : "ніколи",
+      "sec" : "секунд"
+    }
+  },
+  "edit" : "Редагувати",
+  "edit-comment" : "Редагувати коментар",
+  "edit-donation" : "Редагувати донат",
+  "edit-ellipsis" : "Редагувати...",
+  "edit-image" : "Редагувати картинку",
+  "edit-link-preview" : "Редагувати перегляд посилання",
+  "edit-post-title" : "Редагувати пост",
+  "edit-profile" : "Редагувати профіль",
+  "e-mail" : "E-mail",
+  "enable-oppose-reactions" : "Дозволити несхвальні реакції",
+  "enable-reactions" : "Дозволити реакції",
+  "enter-name" : "Введіть ім'я...",
+  "enter-text-here" : "Введіть текст тут...",
+  "expires" : "Придатний до:",
+  "failure-reason" : "Причина невдачі",
+  "feed-title" : {
+    "news" : "Новини",
+    "timeline" : "Хроніка"
+  },
+  "female" : "Жіночий",
+  "female-short" : "ж.",
+  "find-more-people" : "Знайти ще людей →",
+  "fold" : "Згорнути",
+  "follow-comments" : "Слідкувати за коментарями",
+  "forget" : "Забути",
+  "forget-changes" : "Ви дійсно бажаєте забути зміни?",
+  "forget-unfinished-comment" : "Ви дійсно бажаєте забути незавершений коментар?",
+  "undo" : "Скасувати"
 }
