Take gender into account for "Subscribed" in Russian.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -563,7 +563,7 @@
   "strikeout" : "Зачёркнутый",
   "subscribe" : "Подписаться",
   "subscribe-back" : "Подписаться в ответ",
-  "subscribed" : "Подписан",
+  "subscribed" : "{gender, select, female {Подписана} other {Подписан}}",
   "subscribed-to-me" : "Подписан на меня",
   "subscribers" : "Подписчики",
   "subscriptions" : "Подписки",
