Added gender to posting, comment, subscriber and subscription info.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -564,7 +564,7 @@
   "subscribe" : "Подписаться",
   "subscribe-back" : "Подписаться в ответ",
   "subscribed" : "{gender, select, female {Подписана} other {Подписан}}",
-  "subscribed-to-me" : "Подписан на меня",
+  "subscribed-to-me" : "{gender, select, female {Подписана} other {Подписан}} на меня",
   "subscribers" : "Подписчики",
   "subscriptions" : "Подписки",
   "summary" : "Коротко",
