Gender in instant summaries.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -176,11 +176,11 @@
     "and" : "and",
     "and-others" : "and {count} {count, plural, one {other} other {others}}",
     "in-node-blog" : "{node} blog",
-    "in-their-blog" : "their blog",
+    "in-their-blog" : "{gender, select, male {his} female {her} other {their}} blog",
     "in-your-blog" : "your blog",
     "node-post" : "{node} post",
     "on-node-post" : "{node} post",
-    "on-their-post" : "their post",
+    "on-their-post" : "{gender, select, male {his} female {her} other {their}} post",
     "on-your-post" : "your post",
     "opposed" : "opposed",
     "reason" : {
@@ -206,13 +206,13 @@
       "posting-updated" : "{node} updated their post {heading}",
       "posting-update-task-failed" : "Failed to sign your post {heading} in {node} blog",
       "reaction-added" : "{reactions} your post {heading}",
-      "remote-comment-added" : "{comments} commented on {posting} {reason} {heading}",
+      "remote-comment-added" : "{comments} commented on {posting} {heading} {reason}",
       "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
       "subscriber-added" : "{node} subscribed to your {feed}",
       "subscriber-deleted" : "{node} unsubscribed from your {feed}"
     },
     "supported" : "supported",
-    "their-post" : "their post",
+    "their-post" : "{gender, select, male {his} female {her} other {their}} post",
     "your-post" : "your post"
   },
   "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
