--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -182,36 +182,36 @@
     "on-node-post" : "посту {node}",
     "on-their-post" : "своему посту",
     "on-your-post" : "вашему посту",
-    "opposed" : "{count, plural, =1 {возразил} other {возразили}} на",
+    "opposed" : "{count, plural, =1 {{gender, select, female {возразила} other {возразил}}} other {возразили}} на",
     "reason" : {
       "comment" : "который вы прокомментировали",
       "mention" : "в котором вас упомянули",
       "user" : "на который вы подписаны"
     },
     "story" : {
-      "comment-added" : "{comments} {count, plural, =1 {прокомментировал} other {прокомментировали}} ваш пост {heading}",
+      "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку в вашем комментарии {heading} к {posting}",
       "comment-media-reaction-failed" : "Не удалось подписать реакцию на картинку в комментарии {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
       "comment-post-task-failed" : "Не удалось добавить комментарий к посту {node} {heading}",
       "comment-reaction-added" : "{reactions} ваш комментарий {heading} к {posting}",
       "comment-reaction-task-failed" : "Не удалось подписать реакцию на комментарий {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
       "comment-update-task-failed" : "Не удалось подписать комментарий {commentHeading} к посту {node} {postingHeading}",
-      "mention-comment" : "{node} упомянул вас в комментарии {commentHeading} к {posting} {postingHeading}",
-      "mention-posting" : "{node} упомянул вас в посте {heading}",
+      "mention-comment" : "{node} {nodeGender, select, female {упомянула} other {упомянул}} вас в комментарии {commentHeading} к {posting} {postingHeading}",
+      "mention-posting" : "{node} {nodeGender, select, female {упомянула} other {упомянул}} вас в посте {heading}",
       "posting-media-reaction-added" : "{reactions} картинку в вашем посте {heading} в {node}",
       "posting-media-reaction-failed" : "Не удалось подписать реакцию на картинку в посте {node} {heading}",
       "posting-post-task-failed" : "Не удалось добавить ваш пост в блог {node}",
       "posting-reaction-task-failed" : "Не удалось подписать реакцию на пост {node} {heading}",
       "posting-subscribe-task-failed" : "Не удалось подписаться на комментарии к посту {node} {heading}",
-      "posting-updated" : "{node} обновил свой пост {heading}",
+      "posting-updated" : "{node} {nodeGender, select, female {обновила} other {обновил}} свой пост {heading}",
       "posting-update-task-failed" : "Не удалось подписать ваш пост {heading} в блоге {node}",
       "reaction-added" : "{reactions} ваш пост {heading}",
-      "remote-comment-added" : "{comments} {count, plural, =1 {прокомментировал} other {прокомментировали}} {posting} {reason} {heading}",
-      "reply-comment" : "{replies} {count, plural, =1 {ответил} other {ответили}} на ваш комментарий {heading} к {posting}",
-      "subscriber-added" : "{node} подписался на вашу ленту {feed}",
-      "subscriber-deleted" : "{node} отписался от вашей ленты {feed}"
+      "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} {posting} {heading}, {reason}",
+      "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {ответила} other {ответил}}} other {ответили}} на ваш комментарий {heading} к {posting}",
+      "subscriber-added" : "{node} {gender, select, female {подписалась} other {подписался}} на вашу ленту {feed}",
+      "subscriber-deleted" : "{node} {gender, select, female {отписалась} other {отписался}} от вашей ленты {feed}"
     },
-    "supported" : "{count, plural, =1 {одобрил} other {одобрили}}",
+    "supported" : "{count, plural, =1 {{gender, select, female {одобрила} other {одобрил}}} other {одобрили}}",
     "their-post" : "свой пост",
     "your-post" : "ваш пост"
   },
