--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -380,6 +380,8 @@
   "reset-password-hint-instructions" : "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
   "reset-password-instructions" : "Чтобы сбросить пароль, пожалуйста, введите имя или URL вашего блога.",
   "reset-to-default" : "Вернуть значение по умолчанию",
+  "returned-to-beginning" : "Вы вернулись в начало",
+  "returned-to-end" : "Вы вернулись в конец",
   "retype-password" : "Пожалуйста, введите пароль еще раз",
   "rotate-left" : "Повернуть влево",
   "rotate-right" : "Повернуть вправо",
