--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -380,6 +380,8 @@
   "reset-password-hint-instructions" : "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
   "reset-password-instructions" : "Щоб скинути пароль, будь ласка, введіть ім'я або URL вашого блогу.",
   "reset-to-default" : "Повернути значення за замовчуванням",
+  "returned-to-beginning" : "Ви повернулися до початку",
+  "returned-to-end" : "Ви повернулися у кінець",
   "retype-password" : "Будь ласка, введіть пароль ще раз",
   "rotate-left" : "Повернути ліворуч",
   "rotate-right" : "Повернути праворуч",
@@ -608,7 +610,7 @@
   "used-by-addon" : "Використовується додатком:",
   "verify-signature" : "Перевірити підпис",
   "view-as-chart" : "У вигляді діаграми",
-  "view-as-list" : "У вигляді списка",
+  "view-as-list" : "У вигляді списку",
   "view-comments" : "Показати коментарі",
   "view-earlier-comments" : "Показати попередні коментарі",
   "view-images-grid" : "Показати картинки у вигляді мозаїки",
