Translation of flashbox messages.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -36,6 +36,7 @@
   "comment-button" : "Comment",
   "comment-edited-conflict" : "The comment was edited by somebody.",
   "commenting-allowed-to" : "Commenting allowed to",
+  "comment-not-found" : "Comment not found",
   "comments" : "Comments",
   "comments-disabled" : "Comments are disabled",
   "comments-visible-to" : "Comments visible to",
@@ -84,6 +85,7 @@
   "download" : "Download",
   "downloading-image" : "Downloading image...",
   "do-you-have-blog" : "Do you have a Moera blog?",
+  "draft-not-found" : "Draft not found",
   "drafts" : "Drafts",
   "draft-saved" : "Draft saved.",
   "draft-saving" : "Saving...",
@@ -129,6 +131,7 @@
   "find-more-people" : "Find more people →",
   "fold" : "Fold",
   "follow-comments" : "Follow comments",
+  "following-comments" : "Following comments",
   "forget" : "Forget",
   "forget-changes" : "Do you really want to forget the changes?",
   "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
@@ -220,6 +223,7 @@
   "language" : "Language",
   "last-post" : "last",
   "link" : "Link",
+  "link-copied" : "Link copied to the clipboard",
   "links" : "Links",
   "load-all-comments" : "Load all comments",
   "loading-preview" : "Loading preview",
@@ -232,6 +236,7 @@
   "mark-read" : "Mark as Read",
   "mark-unread" : "Mark as Unread",
   "mention" : "Mention",
+  "mention-copied" : "Mention copied to the clipboard",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
   "more-reactions" : "{remaining} more",
   "more-reactions-hidden" : "{remaining} more hidden",
@@ -244,6 +249,7 @@
   "name-already-taken" : "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
   "name-not-allowed" : "Name is not allowed",
+  "name-operation-started" : "Name operation started",
   "name-or-node-url" : "Blog name or URL",
   "name-or-node-url-not-valid" : "Blog name or URL is not valid",
   "new-password" : "New password",
@@ -261,6 +267,7 @@
   "not-allowed" : "Not allowed",
   "not-connected-home" : "Not connected to home",
   "no-text" : "(no text)",
+  "not-following-comments" : "Not following comments",
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
@@ -281,6 +288,7 @@
   "oppose" : "Oppose",
   "original-deleted" : "Original deleted {date}",
   "password" : "Password",
+  "password-changed" : "Password changed",
   "password-incorrect" : "Password is incorrect",
   "password-not-set" : "Password not set yet",
   "passwords-different" : "Passwords are different",
@@ -573,9 +581,11 @@
   "support" : "Support",
   "text" : "Text",
   "text-contains-formatting" : "The text contains formatting. Do you want to copy the text with formatting tags?",
+  "text-copied" : "Text copied to the clipboard",
   "text-formatting" : "Text formatting",
   "text-only" : "Text only",
   "title" : "Title",
+  "token-copied" : "Token copied to the clipboard",
   "token-name" : "Token name",
   "token-usage-warning" : "Please note that the token gives full admin access to your blog. Never give it to anybody you don't trust!",
   "too-long" : "Too long",
