--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -36,6 +36,7 @@
   "comment-button" : "Комментировать",
   "comment-edited-conflict" : "Комментарий был кем-то изменён.",
   "commenting-allowed-to" : "Комментирование разрешено",
+  "comment-not-found" : "Комментарий не найден",
   "comments" : "Комментарии",
   "comments-disabled" : "Комментарии отключены",
   "comments-visible-to" : "Комментарии видны",
@@ -84,6 +85,7 @@
   "download" : "Скачать",
   "downloading-image" : "Скачивание картинки...",
   "do-you-have-blog" : "У вас есть блог на Moera?",
+  "draft-not-found" : "Черновик не найден",
   "drafts" : "Черновики",
   "draft-saved" : "Сохранено.",
   "draft-saving" : "Сохранение...",
@@ -129,6 +131,7 @@
   "find-more-people" : "Найти ещё людей →",
   "fold" : "Свернуть",
   "follow-comments" : "Следить за комментариями",
+  "following-comments" : "Слежу за комментариями",
   "forget" : "Забыть",
   "forget-changes" : "Вы действительно хотите забыть изменения?",
   "forget-unfinished-comment" : "Вы действительно хотите забыть незавершенный комментарий?",
@@ -220,6 +223,7 @@
   "language" : "Язык",
   "last-post" : "последний",
   "link" : "Ссылка",
+  "link-copied" : "Ссылка скопирована в буфер обмена",
   "links" : "Ссылки",
   "load-all-comments" : "Загрузить все комментарии",
   "loading-preview" : "Загрузка предпросмотра",
@@ -232,6 +236,7 @@
   "mark-read" : "Отметить как прочитанное",
   "mark-unread" : "Отметить как непрочитанное",
   "mention" : "Упомянуть",
+  "mention-copied" : "Упоминание скопировано в буфер обмена",
   "more-links" : "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
   "more-reactions" : "Ещё {remaining}",
   "more-reactions-hidden" : "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
@@ -244,6 +249,7 @@
   "name-already-taken" : "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
   "name-help" : "Имя должно быть длиной от 4 до 120 символов. Вы можете использовать любые символы юникода (включая буквы любого алфавита), кроме пробелов и знаков препинания. Разрешены только такие знаки препинания:",
   "name-not-allowed" : "Недопустимое имя",
+  "name-operation-started" : "Операция над именем запущена",
   "name-or-node-url" : "Имя или URL блога",
   "name-or-node-url-not-valid" : "Неверное имя или URL блога",
   "new-password" : "Новый пароль",
@@ -261,6 +267,7 @@
   "not-allowed" : "Недопустимо",
   "not-connected-home" : "Не подключён к дому",
   "no-text" : "(без текста)",
+  "not-following-comments" : "Не слежу за комментариями",
   "nothing-yet" : "Тут пока пусто.",
   "notify-about-update" : "Уведомить подписчиков об обновлении",
   "notify-followers" : "Уведомить подписчиков",
@@ -281,6 +288,7 @@
   "oppose" : "Возражаю",
   "original-deleted" : "Оригинал удалён {date}",
   "password" : "Пароль",
+  "password-changed" : "Пароль изменён",
   "password-incorrect" : "Неверный пароль",
   "password-not-set" : "Пароль ещё не установлен",
   "passwords-different" : "Пароли различаются",
@@ -573,9 +581,11 @@
   "support" : "Одобряю",
   "text" : "Текст",
   "text-contains-formatting" : "Текст содержит форматирование. Вы хотите скопировать текст с тегами форматирования?",
+  "text-copied" : "Текст скопирован в буфер обмена",
   "text-formatting" : "Форматирование текста",
   "text-only" : "Только текст",
   "title" : "Заголовок",
+  "token-copied" : "Токен скопирован в буфер обмена",
   "token-name" : "Имя токена",
   "token-usage-warning" : "Имейте в виду, что токен даёт полный доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long" : "Слишком длинно",
