--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -36,6 +36,7 @@
   "comment-button" : "Коментувати",
   "comment-edited-conflict" : "Коментар був кимось змінений.",
   "commenting-allowed-to" : "Коментування дозволене",
+  "comment-not-found" : "Коментар не знайдено",
   "comments" : "Коментарі",
   "comments-disabled" : "Коментарі вимкнені",
   "comments-visible-to" : "Коментарі видно",
@@ -84,6 +85,7 @@
   "download" : "Завантажити",
   "downloading-image" : "Завантаження картинки...",
   "do-you-have-blog" : "Ви маєте блог на Moera?",
+  "draft-not-found" : "Чернетку не знайдено",
   "drafts" : "Чернетки",
   "draft-saved" : "Збережено.",
   "draft-saving" : "Збереження...",
@@ -129,6 +131,7 @@
   "find-more-people" : "Знайти ще людей →",
   "fold" : "Згорнути",
   "follow-comments" : "Слідкувати за коментарями",
+  "following-comments" : "Слідкую за коментарями",
   "forget" : "Забути",
   "forget-changes" : "Ви дійсно бажаєте забути зміни?",
   "forget-unfinished-comment" : "Ви дійсно бажаєте забути незавершений коментар?",
@@ -220,6 +223,7 @@
   "language" : "Мова",
   "last-post" : "останній",
   "link" : "Посилання",
+  "link-copied" : "Посилання скопійоване до буфера обміну",
   "links" : "Посилання",
   "load-all-comments" : "Завантажити усі коментарі",
   "loading-preview" : "Завантаження перегляду",
@@ -232,6 +236,7 @@
   "mark-read" : "Позначити як прочитане",
   "mark-unread" : "Позначити як непрочитане",
   "mention" : "Згадати",
+  "mention-copied" : "Згадка скопійована до буфера обміну",
   "more-links" : "{count} {count, plural, one {посилання} few {посилання} other {посилань}}",
   "more-reactions" : "Ще {remaining}",
   "more-reactions-hidden" : "Ещё {remaining} {remaining, plural, one {прихована} other {прихованих}}",
@@ -244,6 +249,7 @@
   "name-already-taken" : "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
   "name-help" : "Ім'я має бути довжиною від 4 до 120 символів. Ви можете скористатись будь-якими символами юнікоду (в тому числі літерами будь-якого алфавіту), окрім пробілів та розділових знаків. Дозволені лише такі розділові знаки:",
   "name-not-allowed" : "Неприпустиме ім'я",
+  "name-operation-started" : "Операцію над ім'ям запущено",
   "name-or-node-url" : "Ім'я чи URL блога",
   "name-or-node-url-not-valid" : "Неправильне ім'я або URL блога",
   "new-password" : "Новий пароль",
@@ -261,6 +267,7 @@
   "not-allowed" : "Неприпустимо",
   "not-connected-home" : "Не підключений до дому",
   "no-text" : "(без текста)",
+  "not-following-comments" : "Не слідкую за коментарями",
   "nothing-yet" : "Тут поки що порожньо.",
   "notify-about-update" : "Повідомити підписникам про оновлення",
   "notify-followers" : "Повідомити підписникам",
@@ -281,6 +288,7 @@
   "oppose" : "Заперечую",
   "original-deleted" : "Оригінал видалений {date}",
   "password" : "Пароль",
+  "password-changed" : "Пароль змінений",
   "password-incorrect" : "Невірний пароль",
   "password-not-set" : "Пароль ще не встановлений",
   "passwords-different" : "Паролі відмінні",
@@ -573,9 +581,11 @@
   "support" : "Схвалюю",
   "text" : "Текст",
   "text-contains-formatting" : "Текст містить форматування. Ви бажаєте скопіювати текст із тегами форматування?",
+  "text-copied" : "Текст скопійований до буфера обміну",
   "text-formatting" : "Форматування текста",
   "text-only" : "Тільки текст",
   "title" : "Заголовок",
+  "token-copied" : "Токен скопійований до буфера обміну",
   "token-name" : "Ім'я токена",
   "token-usage-warning" : "Майте на увазі, що токен дає повний доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long" : "Занадто довго",
